# atlas-texture-creator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_and_release.yml
atlas-texture-creator/: pyproject.toml
atlas-texture-creator-cli/: pyproject.toml
atlas-texture-creator-cli/atlas_texture_creator_cli/: collection.py  main.py
atlas-texture-creator-gui/: README.md  build.py  pyproject.toml  run.py
atlas-texture-creator-gui/atlas_texture_creator_gui/: main.py  types.py
atlas-texture-creator-gui/atlas_texture_creator_gui/Forms/: LabelForm.py
atlas-texture-creator-gui/atlas_texture_creator_gui/TexturesView/: TextureViewImage.py  TextureViewImageInfo.py  TexturesView.py
atlas-texture-creator-gui/atlas_texture_creator_gui/Toolbar/: Toolbar.py  __init__.py
atlas-texture-creator-gui/atlas_texture_creator_gui/Window/: AboutWindow.py  GenerateAtlasWindow.py  MainWindow.py  __init__.py
atlas-texture-creator-gui/atlas_texture_creator_gui/components/Bars/: MenuBar.py
atlas-texture-creator-gui/atlas_texture_creator_gui/components/Bars/Toolbar/: Toolbar.py
atlas-texture-creator-gui/atlas_texture_creator_gui/components/Forms/: __init__.py
atlas-texture-creator-gui/atlas_texture_creator_gui/components/Layouts/: ProgressStackLayout.py  __init__.py
atlas-texture-creator-gui/atlas_texture_creator_gui/components/ProgressView/: ProgressView.py  __init__.py
atlas-texture-creator-gui/atlas_texture_creator_gui/components/Window/: ExportTextures.py  GenerateAtlasWindow.py  OptionWindow.py  ProgressDialog.py  __init__.py
atlas-texture-creator-gui/atlas_texture_creator_gui/handlers/: AtlasManagerHandler.py  CollectionCacheHandler.py  __init__.py
atlas-texture-creator-gui/atlas_texture_creator_gui/utils/: image_format.py
atlas-texture-creator/atlas_texture_creator/: __init__.py  atlas_collection.py  atlas_manager.py  atlas_texture.py  types.py
atlas-texture-creator/atlas_texture_creator/db/: __init__.py  models.py
atlas-texture-creator/atlas_texture_creator/store/: store.py
atlas-texture-creator/docs/: mkdocs.yml
atlas-texture-creator/docs/docs/atlas_texture_creator/: atlas_collection.md  atlas_texture.md
atlas-texture-creator/docs/en/: mkdocs.yml
atlas-texture-creator/docs/en/docs/atlas_texture_creator/: atlas_collection.md  atlas_manager.md
atlas-texture-creator/tests/: conftest.py  test_atlas_collection.py  test_atlas_manager.py  test_atlas_texture.py
gui/: main.py
gui/MainWindow/: MainWindow.py
gui/TexturesView/: TextureViewImage.py  TextureViewImageInfo.py  TexturesView.py
gui/Toolbar/: Toolbar.py
src/atlas_texture_creator/: __init__.py  atlas_collection.py  atlas_manager.py  atlas_texture.py  types.py
src/atlas_texture_creator/store/: __init__.py  models.py  store.py
src/gui/: atlas_manager_handler.py  main.py
src/gui/MainWindow/: MainWindow.py
src/gui/TexturesView/: TextureViewImage.py  TextureViewImageInfo.py  TexturesView.py  __init__.py
src/gui/Toolbar/: Toolbar.py  __init__.py
