[tool.poetry]
name = "atlas-texture-creator-gui"
version = "0.2.0"
description = ""
authors = ["pglaw <philipp.glaw@gmx.de>"]
readme = "README.md"
packages = [{include = "atlas_texture_creator_gui"}]

[tool.poetry.scripts]
gui = "atlas_texture_creator_gui.main:start"
build = "build:build"

[tool.poetry.dependencies]
python = "^3.12"
pyside6 = "^6.6.0"
atlas_texture_creator = {path = "../atlas-texture-creator", develop = true}
pyinstaller = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-qt = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
